# example-communication-server

./: Cargo.toml  README.md
.github/workflows/: build.yml  build_rust_release.yml  publish-crate.yml  publish-docker-images.yml
example-communication-client/: Cargo.toml
example-communication-client/src/: commands.rs  communication.rs  main.rs  settings.rs  sound_thread.rs
example-communication-client/ui/: app-window.slint
example-communication-common/: Cargo.toml
example-communication-common/src/: communication.rs  connection.rs  file_transfer_receiver.rs  file_transfer_sender.rs  lib.rs  threading.rs
example-communication-common/ui/: common-components.slint  dynamic_form_system.slint
example-communication-controller/: Cargo.toml
example-communication-controller/src/: communication.rs  main.rs  settings.rs
example-communication-controller/ui/: app-window.slint
example-communication-server/: Cargo.toml  Dockerfile
example-communication-server/src/: client.rs  handlers.rs  main.rs  webserver.rs  websocket.rs
