[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
example-communication-common = {version = "0.1.4", path = "../example-communication-common", features = ["client"]}
tokio = { version = "1.49.0",  features = ["rt-multi-thread", "fs"]}
slint = { version = "1.14.1", features = ["renderer-femtovg"] }
lofty = "0.22.4"
rodio = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
confy = { version="2.0.0", features =  ["ron_conf"], default-features = false}
field_name = "0.2.0"
notify = "9.0.0-rc.2"
walkdir = "2.5.0"

[build-dependencies]
slint-build = "1.14"