[package]
name = "example-communication-common"
version = "0.1.0"
authors = ["exlted <exltedofdrg@gmail.com>"]
license = "MIT"
description = "Helper library for the Example-Communication Project"
repository = "https://github.com/exlted/example-communication-server"
homepage = "https://github.com/exlted/example-communication-server"
edition = "2024"

[features]
test = ["client", "server"]
client = ["dep:tokio-tungstenite", "dep:tokio", "dep:futures-util", "dep:tokio-stream"]
server = []

[dependencies]
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"], optional = true }
tokio = { version = "1.49.0", optional = true, features = ["sync", "rt", "macros"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio-stream = { version = "0.1.18" , optional = true}
futures-util = { version = "0.3.31"  , optional = true}