[package]
name = "example-communication-common"
version = "0.1.3"
authors = ["exlted <exltedofdrg@gmail.com>"]
license = "MIT"
description = "Helper library for the Example-Communication Project."
repository = "https://github.com/exlted/example-communication-server"
homepage = "https://github.com/exlted/example-communication-server"
edition = "2024"

[features]
test = ["client", "server"]
client = ["dep:tokio-tungstenite", "dep:tokio", "dep:futures-util", "dep:tokio-stream", "dep:bytes", "dep:checkasum"]
server = []

[dependencies]
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"], optional = true }
tokio = { version = "1.49.0", optional = true, features = ["sync", "rt", "macros", "fs"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio-stream = { version = "0.1.18" , optional = true}
futures-util = { version = "0.3.31"  , optional = true}
bytes = { version = "1.11.0", optional = true }
checkasum = { version = "3.0.0", optional = true }