[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0",  features = ["full"]}
example-communication-common = {version = "0.1.3", path = "../example-communication-common", features = ["client"]}
slint = { version = "1.14.1", features = ["renderer-femtovg"] }
serde = { version = "1.0.228", features = ["derive"] }
confy = { version="2.0.0", features =  ["ron_conf"], default-features = false}
field_name = "0.2.0"

[build-dependencies]
slint-build = "1.14"