[package]
name = "server"
version = "0.1.5"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
warp = { version = "0.4.2", features = ["websocket", "server"] }
tokio-stream = "0.1.18"
uuid = { version = "1.19.0", features = ["v4"] }
futures = "0.3.31"
example-communication-common = {version = "0.1.1", features = ["server"]}
serde_json = "1.0.149"
log = "0.4.29"
thiserror = "2.0.18"